# studio_cluster_plagin

./: CMakeLists.txt  Cluster.cpp  Cluster.h  cluster.json  cluster.qrc  cluster_console.cpp  cluster_console.h  commandConstructor.cpp  commandConstructor.h  projectHash.cpp  projectHash.h  qt_ssh.cpp  qt_ssh.h  qt_ssh.ui  sftpWrapper.cpp  sftpWrapper.h  sshClient.cpp  sshClient.h  timer.h
